@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-01T08:14:32Z",
-  "count_outdated" : 171,
-  "uniques_outdated" : 145,
+  "timestamp" : "2023-09-03T08:12:43Z",
+  "count_outdated" : 172,
+  "uniques_outdated" : 146,
   "count" : 180,
   "uniques" : 153,
   "clones" : [
-    {
-      "timestamp": "2023-08-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-21T00:00:00Z",
       "count": 1,
